# djangoProject

./: docker-compose.yml  pyproject.toml
djangoProject/: settings.py
djangoProject/core/: models.py
djangoProject/core/migrations/: 0001_initial.py  0002_alter_foreign_key.py
docker/db_migrator/: Dockerfile  db_migrator.py  requirements.in
docker/postgres_db/.docker-containers/postgres/: Dockerfile  configure.sh
docker/postgres_db/.docker-env/dev/: common.env  postgres.env
