[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Viachaslau <viachaslau.kazakou@coxautoinc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
psycopg = "==3.1.15"
psycopg-binary= "==3.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
